[package]
name = "neopixel_qtpy"
version = "0.1.0"
edition = "2021"

[dependencies]
ch32-hal = { git = "https://github.com/ch32-rs/ch32-hal.git", features = [
    "ch32v203g6u6",
    "memory-x",
    "embassy",
    "rt",
    "time-driver-tim2",
], default-features = false }

embedded-hal = "1.0.0"

# use same version as ch32-hal
qingke = "*"
qingke-rt = "*"
smart-leds = "0.4.0"
ws2812-delay = { version = "0.1.0", git = "https://github.com/rappet/ws2812-delay-rs.git", features = ["slow"]}


[profile.release]
strip = false   # symbols are not flashed to the microcontroller, so don't strip them.
lto = true
opt-level = "z" # Optimize for size.
